--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = xcn_translate
-version = 0.0.1
+version = 0.0.2
 author = CMA
-author_email = kevin.chang@netgear.com
+author_email = cypressmobileapp@gmail.com
 description = some translate functions.
 long_description = file: README.md
 long_description_content_type = text/markdown
